# E-Rechnungs-Pruefer

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  START_HERE.txt  SUPPORT.md  THIRD_PARTY.md  compose.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  tax_mapping.yml
.github/workflows/: ci.yml  codeql.yml  dependency-audit.yml  release.yml
app/: __init__.py  analyzer.py  cli.py  code_lists.py  desktop_security.py  main.py  pdf_report.py  server_runtime.py  settings.py  source.py  windows_acl.py  windows_desktop_migration.py  windows_install_reconcile.py  windows_install_recovery.py  windows_install_transaction.py  windows_launcher.py  windows_open_client.py  windows_service.py  windows_service_config.py  windows_service_ipc.py  windows_service_metadata.py  windows_service_preflight.py  windows_sync.py  xml_utils.py
app/examples/: cii-rechnung-demo.xml  ubl-rechnung-demo.xml
app/parsers/: __init__.py  cii.py  common.py  ubl.py
app/static/: app.js  styles.css
app/templates/: index.html  report.html
app/validators/: __init__.py  builtin.py  kosit.py
docs/: ARCHITECTURE.md  AUTOMATION_INTEGRATION.md  CODEX.md  GITHUB_SETUP.md  NODE_RED.md  RELEASE.md  ROADMAP.md  SECURITY_MODEL.md  TAX_CATEGORIES.md  VALIDATION.md  WINDOWS_PACKAGE.md
docs/adr/: 0001-windows-service-mode.md
docs/examples/: node-red-e-rechnungs-pruefer-flow.json
packaging/windows/: components.lock.json  e_rechnungs_pruefer.spec  e_rechnungs_pruefer_open_client.spec  e_rechnungs_pruefer_service.spec  entrypoint.py  installer.iss  open_client_entrypoint.py  (+4 more)
scripts/: bootstrap_dev.ps1  bootstrap_dev.sh  build_release.py  build_windows.ps1  check.ps1  check.sh  init_git.ps1  init_git.sh  install_kosit.py  prepare_windows_components.py  start.bat  start.sh  test_windows_migration.ps1  test_windows_package.ps1  test_windows_service_package.ps1  verify_version.py
tests/: conftest.py  node_red_flow.test.mjs  test_api.py  test_api_service_mode.py  test_cii.py  test_cli.py  test_desktop_security.py  test_kosit.py  test_node_red_flow.py  test_parser_common.py  test_pdf.py  test_pdf_report.py  test_repository_tools.py  test_settings.py  test_tax_categories.py  test_ubl.py  test_validation.py  test_windows_acl.py  test_windows_components.py  test_windows_desktop_migration.py  test_windows_install_reconcile.py  test_windows_install_recovery.py  test_windows_install_transaction.py  test_windows_launcher.py  test_windows_native_adapters.py  test_windows_open_client_transaction.py  test_windows_service_browser.py  test_windows_service_config.py  test_windows_service_entrypoint.py  test_windows_service_metadata.py  test_windows_service_packaging.py  test_windows_service_runtime.py
(+5 files in other folders)
