[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "e-rechnung-pruefer"
version = "1.2.0"
description = "Lokaler Viewer und Prüfer für CII-, XRechnung-, ZUGFeRD-, Factur-X- und UBL-E-Rechnungen"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "E-Rechnungs-Pruefer contributors" }]
keywords = [
  "e-rechnung",
  "xrechnung",
  "zugferd",
  "factur-x",
  "en16931",
  "cii",
  "ubl",
  "kosit",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business :: Financial",
]
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.18,<1",
  "lxml>=5.3,<7",
  "pypdf>=6,<7",
  "reportlab>=5,<6",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "httpx>=0.27,<1",
  "httpx2>=2,<3",
  "mypy>=1.14,<2",
  "pip-audit>=2.7,<3",
  "pre-commit>=4,<5",
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.12,<1",
  "twine>=6,<7",
]

[project.scripts]
e-rechnung-pruefer = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = [
  "templates/*.html",
  "static/*.css",
  "static/*.js",
  "examples/*.xml",
  "assets/fonts/*.ttf",
  "assets/fonts/*.txt",
  "assets/fonts/*.md",
]

[tool.pytest.ini_options]
addopts = "-q --strict-config --strict-markers"
testpaths = ["tests"]
filterwarnings = [
  'error:^Using `httpx` with `starlette\.testclient` is deprecated; install `httpx2` instead\.$:starlette.exceptions.StarletteDeprecationWarning',
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/__main__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
exclude_also = [
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["build", "dist", "vendor"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
"app/main.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
files = ["app", "scripts/verify_version.py", "scripts/build_release.py", "scripts/prepare_windows_components.py"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = "(^|/)(build|dist|vendor|\\.venv)/"
